# Electric-Funeral

./: .gitignore  Dockerfile  LICENSE  README.md  WebServer.py  bot  botnet_controller  create_network  create_network.py  docker-compose.yml  docker-entrypoint.sh  mininet.yaml  network_controller.py  requirements.txt  setup.sh
Attacks-Rust/: .gitignore  Cargo.toml  README.md
Attacks-Rust/src/: main.rs
Attacks-Rust/src/icmp_flood/: mod.rs
