[package]
name = "Attacks-Rust"
version = "0.1.0"
authors = ["Vishesh Choudhary <vishachoudhary@gmai.com>"]
edition = "2021"
license = "GPL-3.0"
description = "Rust Implementations Of DoS Attacks."
repository = "https://github.com/visheshc14/Electric-Funeral"
readme = "README.md"

[dependencies]
rand = "0.7.3"
pnet = "0.26.0"
ctrlc = "3.1.4"
