[package]
name = "Attacks-Rust"
version = "0.1.0"
authors = ["Vishesh Choudhary <vishachoudhary@gmail.com>"]
edition = "2021"
description = "Rust Implementations Of DoS Attacks."
repository = "https://github.com/visheshc14/Electric-Funeral"
readme = "README.md"

[dependencies]
rand = "0.8"
pnet = "0.34.0"
ctrlc = "3.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"